extends Control


func _on_PayMortgage_pressed() -> void:
	pass # Replace with function body.


func _on_payFood_pressed() -> void:
	pass # Replace with function body.


func _on_payOther_pressed() -> void:
	pass # Replace with function body.


func _on_SignOff_pressed() -> void:
	pass # Replace with function body.
